updated live chnages ekyc esign and ui service